Improved mobile visibility

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <h2>Trombone Champ</h2>
         <p>Honk, blow, & toot your way through over 60 songs. Collect all 50 unique Tromboner Cards and uncover the mysteries of the Trombiverse. Do you have what it takes to become the true Trombone Champ?</p>
 
-        <iframe id="video" width="560" height="315" src="https://www.youtube.com/embed/NpQ8a3c7EAQ?si=JACg3MSdKKpxx-u5&amp;controls=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+        <iframe id="video" src="https://www.youtube.com/embed/NpQ8a3c7EAQ?si=JACg3MSdKKpxx-u5&amp;controls=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
     </section>
     <section id="buy">
         <h2>Get the soundtrack</h2>
